# ChangeLog for net-mail/courier
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/courier/Attic/ChangeLog,v 1.45 2004/02/16 01:40:18 iggy Exp $

  15 Feb 2004; Brian Jackson <iggy@gentoo.org> courier-0.44.2.20040201.ebuild:
  a few cleanups, and fix bug 32878

*courier-0.44.2.20040201 (08 Feb 2004)

  08 Feb 2004; Brian Jackson <iggy@gentoo.org> courier-0.44.0.ebuild,
  courier-0.44.2.20040201.ebuild, courier-0.44.2.ebuild:
  version bump to fix a problem with 2.6 kernels, changed a few keywords

  14 Jan 2004; Aron Griffis <agriffis@gentoo.org> courier-0.44.2.ebuild:
  add ~alpha (bug 21240)

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> courier-0.44.0.ebuild,
  courier-0.44.2.ebuild:
  changed app-text/ghostscript to virtual/ghostscript

  08 Dec 2003; Brian Jackson <iggy@gentoo.org> courier-0.42.2.ebuild,
  courier-0.43.2.ebuild, courier-0.44.0.ebuild, courier-0.44.2.ebuild,
  files/courier-0.42.2-gentoo.diff.bz2:
  cleaning out old ebuilds/etc, and cleaning up touch .keep's

  08 Dec 2003; Brian Jackson <iggy@gentoo.org> courier-0.42.2.ebuild:
  fixed the other chown in courier-0.42.2

  07 Dec 2003; foser <foser@gentoo.org> courier-0.*.ebuild :
  Fix fam-oss > fam, due to move

  07 Dec 2003; Brian Jackson <iggy@gentoo.org> courier-0.44.2.ebuild:
  add note about recent sed magic

  30 Nov 2003; Brian Jackson <iggy@gentoo.org> courier-0.44.0.ebuild:
  bump 0.44.0 to x86

*courier-0.44.2 (30 Nov 2003)

  30 Nov 2003; Brian Jackson <iggy@gentoo.org> courier-0.44.2.ebuild,
  files/courier-init:
  version bump

*courier-0.44.0 (07 Nov 2003)

  07 Nov 2003; Brian Jackson <iggy@gentoo.org> courier-0.42.2-r3.ebuild,
  courier-0.42.2.ebuild, courier-0.43.1.ebuild, courier-0.43.2.ebuild,
  courier-0.44.0.ebuild, files/gentoo.diff.bz2:
  version bump
  cleaned up the ebuild a little
  some docs weren't getting installed
  fix bug 32269
  applying the sqwebmail patch again
